# WiSAR-InfraredImage-Processor

./: .gitignore  CMakeLists.txt  InfraredProccesor.h  InfraredProcessor.cpp  main.cpp  run.sh  testMat.sln  testMat.vcxproj  testMat.vcxproj.filters
Video/: IR01-result.avi
include/: InfraredProccesor.h
x64/Release/InfraredProcess.tlog/: CL.read.1.tlog  CL.write.1.tlog  InfraredProcess.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
